--- a/src/app/pantalla-inicio/pantalla-inicio.component.html
+++ b/src/app/pantalla-inicio/pantalla-inicio.component.html
@@ -1,15 +1,23 @@
-<form>
-    <div class="mb-3">
-        <label class="form-label">Nombre</label>
-        <input #nombre type="text" class="form-control">
+<div class="container">
+    <div class="row">
+        <div class="col-12 from-shadow">
+            <form>
+                <div class="mb-3">
+                    <label class="form-label">Nombre</label>
+                    <input #nombre type="text" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Apellido Paterno</label>
+                    <input #apPaterno type="text" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Apellido Materno</label>
+                    <input #apMaterno type="text" class="form-control">
+                </div>
+                                
+                <button (click)="this.traerInformacion(nombre.value, apPaterno.value, apMaterno.value);" type="button" class="btn btn-primary">Enviar</button>                
+
+            </form>
+        </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label">Apellido Paterno</label>
-        <input #apPaterno type="text" class="form-control">
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Apellido Materno</label>
-        <input #apMaterno type="text" class="form-control">
-    </div>
-    <button (click)="this.traerInformacion(nombre.value, apPaterno.value, apMaterno.value);" type="button" class="btn btn-primary">Enviar</button>
-</form>
+</div>
