--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,22 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">{{this._tituloNavBar}}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a (click)="this.btnInicio();" class="nav-link active" aria-current="page">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a (click)="this.btnDetalles();" class="nav-link">Detalles</a>
-                </li>
-                <li *ngIf="this._menuCierraSesionBoolean" class="nav-item">
-                    <a class="nav-link" href="#">Cerrar sesion</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="#">{{this._tituloNavBar}}</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a (click)="this.btnInicio();" class="nav-link active" aria-current="page">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a (click)="this.btnDetalles();" class="nav-link">Detalles</a>
+            </li>
+            <li *ngIf="this._menuCierraSesionBoolean" class="nav-item">
+                <a class="nav-link" href="#">Cerrar sesion</a>
+            </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
